// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <DayPickerInput
      classNames={
        Object {
          "container": "DayPickerInput",
          "overlay": "DayPickerInput-Overlay",
          "overlayWrapper": "DayPickerInput-OverlayWrapper",
        }
      }
      clickUnselectsDay={false}
      component="input"
      dayPickerProps={Object {}}
      format="L"
      formatDate={[Function]}
      hideOnDayClick={true}
      inputProps={Object {}}
      keepFocus={true}
      onDayChange={[Function]}
      overlayComponent={[Function]}
      parseDate={[Function]}
      placeholder={"1970-01-01T00:00:00.000Z"}
      showOverlay={false}
      typedValue=""
      value="01/01/1970"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;

exports[`should render ExpenseForm correctly with expense data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value="Rent"
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value="1095"
    />
    <DayPickerInput
      classNames={
        Object {
          "container": "DayPickerInput",
          "overlay": "DayPickerInput-Overlay",
          "overlayWrapper": "DayPickerInput-OverlayWrapper",
        }
      }
      clickUnselectsDay={false}
      component="input"
      dayPickerProps={Object {}}
      format="L"
      formatDate={[Function]}
      hideOnDayClick={true}
      inputProps={Object {}}
      keepFocus={true}
      onDayChange={[Function]}
      overlayComponent={[Function]}
      parseDate={[Function]}
      placeholder={"1969-12-31T23:59:59.000Z"}
      showOverlay={false}
      typedValue=""
      value="01/01/1970"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <DayPickerInput
      classNames={
        Object {
          "container": "DayPickerInput",
          "overlay": "DayPickerInput-Overlay",
          "overlayWrapper": "DayPickerInput-OverlayWrapper",
        }
      }
      clickUnselectsDay={false}
      component="input"
      dayPickerProps={Object {}}
      format="L"
      formatDate={[Function]}
      hideOnDayClick={true}
      inputProps={Object {}}
      keepFocus={true}
      onDayChange={[Function]}
      overlayComponent={[Function]}
      parseDate={[Function]}
      placeholder={"1970-01-01T00:00:00.000Z"}
      showOverlay={false}
      typedValue=""
      value="01/01/1970"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 2`] = `
<div>
  <p>
    Please enter description and amount.
  </p>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <DayPickerInput
      classNames={
        Object {
          "container": "DayPickerInput",
          "overlay": "DayPickerInput-Overlay",
          "overlayWrapper": "DayPickerInput-OverlayWrapper",
        }
      }
      clickUnselectsDay={false}
      component="input"
      dayPickerProps={Object {}}
      format="L"
      formatDate={[Function]}
      hideOnDayClick={true}
      inputProps={Object {}}
      keepFocus={true}
      onDayChange={[Function]}
      overlayComponent={[Function]}
      parseDate={[Function]}
      placeholder={"1970-01-01T00:00:00.000Z"}
      showOverlay={false}
      typedValue=""
      value="01/01/1970"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;
